--- a/style.css
+++ b/style.css
@@ -3,11 +3,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;300;400;600;700;900&display=swap');
 /* -- Setting some variables to color and fonts ,enz-- */
 :root{
-    --PrimaryColor : rgb(236, 231, 229);
-    --SecondaryColor : rgb(0, 0, 255);
-    --PrimaryFont : 'Roboto Mono', monospace;    
+    --PrimaryColor :rgb(72, 136, 161);
+    --SecondaryColor :rgb(43, 84, 126);
+    --PrimaryFont : 'Roboto Mono', monospace;
+      
 }
 /*--Small Reset--*/
+
+.center{
+  margin:0 auto;
+}
 
 *{
     margin:0;
@@ -22,6 +27,7 @@ html {
     margin: 0;
     padding: 0;
     font-weight: normal;
+
   }  
   ol, ul {
     list-style: none;
@@ -33,8 +39,8 @@ html {
 
 /* -- Start Styling -- */
 section{
-  background-color: var(--PrimaryColor);
-  /* background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('./assets/img/bg.jpg'); */
+  background-color:rgba(227, 240, 245, 0.3);
+
 background-position: center center;
 background-repeat: no-repeat;
 background-size: cover;
@@ -45,35 +51,41 @@ min-height: 100%;
 /*-- Start NAVBAR -- */ 
 
 header{
-  background-color: rgb(14, 35, 50);
   height: 10vh;  
   align-items: center;  
   display: flex;
-position: sticky;
-width: 100%;
-top: 0;
+  position: sticky;
+  width: 100%;
+  top: 0;
+  
 }
 nav{
-margin: 0 auto;
-width: 90%;
-display: flex;
-justify-content: space-between;
+  margin: 0 auto;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--SecondaryColor);
+  padding-bottom: 1rem;
+
 }
 .nav-list{  
-  display: flex;  
+  display: flex; 
+ 
+
 }
 li{
   list-style: none;
-  font-weight: 600;
+  font-weight: 200;
   margin-right: 1rem;
   padding: 5px 10px;
   font-family: var(--PrimaryFont);
-  font-size: 1.3rem;
-  font-weight: bolder;
+  font-size: 1rem;
+  letter-spacing: 1px;
+ 
 }
 a{
   text-decoration: none;
-  color: rgba(230, 217, 217, 0.918);
+  color:var(--SecondaryColor);
   
 }
 i{
@@ -124,7 +136,6 @@ nav div.left_nav ul li a:hover {
 
 /* -- Start Footer --*/ 
 footer{
-  background-color:rgb(14, 35, 50);
   height: 10vh;
   align-items: center;  
   display: flex;
