--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ li{
 a{
   text-decoration: none;
   color:var(--SecondaryColor);
+  font-family: var(--PrimaryFont);
   
 }
 i{
@@ -99,9 +100,6 @@ i{
   color:var(--SecondaryColor);
 }
 
-nav .left_nav ul li a:hover {
-	color: #c5d2e5;
-}
 
 
 /* Start Homepage --*/ 
@@ -139,6 +137,8 @@ footer{
   height: 10vh;
   align-items: center;  
   display: flex;
+  font-family: var(--PrimaryFont);
+ 
  
 
  
@@ -149,7 +149,6 @@ footer{
   text-align: center;
   border-top: 1px solid var(--SecondaryColor);
   padding-top:1rem;
-
 }
 .info{
   display: flex;
@@ -307,4 +306,5 @@ h2{
     svg {
         width: 570px;
         max-width: 100%;
+        margin-left: 5rem;
 }
