--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ i{
   /*background-color: rgba(224, 217, 207, 0.158);*/
   
    text-align: left;
-  height: 80vh;
+  min-height: 80vh;
   display: flex;
 
 }
