--- a/style2.css
+++ b/style2.css
@@ -1,8 +1,8 @@
 .container3{
-    width: 70%;
+    width: 80%;
     margin: 0 auto;
     background-color: burlywood;
-    height: 80vh;
+    min-height: 80vh;
 }
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;300;400;600;700;900&display=swap');
 /* -- Setting some variables to color and fonts ,enz-- */
@@ -10,7 +10,7 @@
     --PrimaryColor :rgb(72, 136, 161);
     --SecondaryColor :rgb(43, 84, 126);
     --PrimaryFont : 'Roboto Mono', monospace;
-      
+    
 }
 
 /* Login form */
