--- a/style2.css
+++ b/style2.css
@@ -1,10 +1,16 @@
+.container3{
+    width: 80%;
+    margin: 0 auto;
+    background-color: burlywood;
+    min-height: 80vh;
+}
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;300;400;600;700;900&display=swap');
 /* -- Setting some variables to color and fonts ,enz-- */
 :root{
     --PrimaryColor :rgb(72, 136, 161);
     --SecondaryColor :rgb(43, 84, 126);
     --PrimaryFont : 'Roboto Mono', monospace;
-      
+    
 }
 
 /* Login form */
