--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     --PrimaryColor :rgb(72, 136, 161);
     --SecondaryColor :rgb(43, 84, 126);
     --PrimaryFont : 'Roboto Mono', monospace;
+    --FontNav:400;
       
 }
 /*--Small Reset--*/
@@ -39,13 +40,9 @@ html {
 
 /* -- Start Styling -- */
 section{
-  background-color:rgba(227, 240, 245, 0.3);
-
-background-position: center center;
-background-repeat: no-repeat;
-background-size: cover;
-max-width: 100vw;
-min-height: 100%;
+background-color:rgba(227, 240, 245, 0.3);
+min-width: 100vw;
+min-height: 80vh;
 
 }
 /*-- Start NAVBAR -- */ 
@@ -54,7 +51,6 @@ header{
   height: 10vh;  
   align-items: center;  
   display: flex;
-  position: sticky;
   width: 100%;
   top: 0;
   
@@ -75,7 +71,7 @@ nav{
 }
 li{
   list-style: none;
-  font-weight: 200;
+  font-weight: var(--FontNav);
   margin-right: 1rem;
   padding: 5px 10px;
   font-family: var(--PrimaryFont);
@@ -110,7 +106,7 @@ i{
   margin: 0 auto;
   /*background-color: rgba(224, 217, 207, 0.158);*/
   
-   text-align: left;
+  text-align: left;
   min-height: 80vh;
   display: flex;
 
@@ -197,8 +193,6 @@ a{
  
 }
 .test p{
-border: 1px solid black;
-margin: 1rem;
 display: inline-block;
 }
 
@@ -305,7 +299,21 @@ h2{
     }
     
     svg {
-        width: 1070px;
+        width: 700px;
         max-width: 100%;
         margin-left: 5rem;
+}
+
+.btn-hp{
+  margin:0 auto;
+  text-align: center;
+  position: absolute;
+  top:60%;
+  left:50%;
+ 
+}
+
+.dirk{
+ font-weight:900;
+ font-size:2rem;
 }
