--- a/style.css
+++ b/style.css
@@ -318,6 +318,7 @@ h2{
  font-size:2rem;
 }
  .errorMessage {
-  text-align: center;
+  text-align: left;
   color: red;
+  font-family: "Roboto Mono";
 }
