--- a/style.css
+++ b/style.css
@@ -137,9 +137,7 @@ footer{
   display: flex;
   font-family: var(--PrimaryFont);
  
- 
 
- 
 
  
 }
@@ -191,7 +189,7 @@ span{
   
 }
 a{
-  color: rgb(0, 0, 0);
+  color:var(--FourColor);
  
 }
 .test p{
@@ -307,6 +305,8 @@ h2{
         margin-left: 5rem;
 }
 
+/* Button in Homepage  --*/ 
+
 .btn-hp{
   margin:0 auto;
   text-align: center;
@@ -316,6 +316,26 @@ h2{
   
  
 }
+
+.main-btn{
+  background-color:#36398b8f;
+  transition: .3s;
+  border: 1px solid #bfd1d8;
+  border-radius: 5px;
+  color:var(--FiveColor);
+  font-size:1rem;
+}
+
+.main-btn:hover{
+  border: 2px solid #213b5a;
+  background-color: rgba(365,365,365,0.5);
+  cursor: pointer;
+  opacity: .8;
+  transition: .3s;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  border:none;
+}
+
 
 
 .dirk{
