--- a/style.css
+++ b/style.css
@@ -366,3 +366,11 @@ h2{
   width: 100px;
   background-color: yellow;
 }
+
+.container9{
+
+  border: 1px solid grey ;
+  width: 50%;
+ word-wrap: 150px;
+ margin-top: 1rem;
+}
