--- a/style.css
+++ b/style.css
@@ -317,13 +317,18 @@ h2{
   
  
 }
-
+button a{
+  color: whitesmoke;
+}
+button a:hover{
+  color:var(--FourColor)
+}
 .main-btn{
   background-color:#36398b8f;
   transition: .3s;
-  border: 1px solid #bfd1d8;
+  border: 2px solid whitesmoke;
   border-radius: 5px;
-  color:var(--FiveColor);
+  
   font-size:1rem;
 }
 
@@ -334,7 +339,7 @@ h2{
   opacity: .8;
   transition: .3s;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  border:none;
+  border: 2px solid #bfd1d8;
 }
 
 
