--- a/sucess.css
+++ b/sucess.css
@@ -3,3 +3,19 @@
     margin-right:4rem;
 
 }
+
+thead  {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color:#429991;
+    color: white;
+  }
+
+.box{
+    border:1px solid rgb(128, 153, 173);
+}
+
+.center{
+    text-align: center;
+}
