--- a/login.css
+++ b/login.css
@@ -50,7 +50,7 @@ img.photo{
     color: rgb(233, 217, 217);
     font-size: 1rem;
     font-family: var(--PrimaryFont);
-    background-color:var(--ThreeColor);
+    background-color:var(--SecondaryColor);
     padding:0.5rem ;
     cursor: pointer;   
     }
