--- a/becoders.css
+++ b/becoders.css
@@ -1,25 +1,32 @@
 
 .container5{
-    background-color:var(--FourColor);
+    background-color:var(--ZesColor);
     width: 80%;
     margin: 0 auto;
-    border: 1px solid rgb(75, 103, 139);
+    border: 1px solid rgb(84, 124, 177);
     text-align: center;
+    padding: 20px ;
+    border-radius: 20px;
 }
+
 .info-img{
     width: 200px;
     height: 200px;
     border: 2px solid whitesmoke;
     align-self: center;
 }
+
 .info-name{
 font-family: var(--PrimaryFont);
 font-size: 2.5rem;
 color:var(--SecundaryColor) ;
+
 }
+
 .info-job{
 font-family: var(--PrimaryFont);
 }
+
 span{
     font-family: var(--PrimaryFont); 
 }
@@ -39,12 +46,17 @@ span{
     display:flex;
 }
 .info-left{
+    border-radius: 20px;
     border: 1px solid rgb(75, 103, 139);   
     flex:1
+    
 }
 .info-right{
+
+    border-radius:20px;
     border: 1px solid rgb(75, 103, 139);   
     flex:1
+   
     
 }
 .info-repos{
