--- a/login.css
+++ b/login.css
@@ -7,6 +7,7 @@
     --ThreeColor:rgb(0, 94, 128);
     --FourColor:rgb(86, 114, 156) ;
     --FiveColor:rgb(250, 239, 239);
+    --ZesColor:rgba(181, 186, 238, 0.753);
     --PrimaryFont : 'Roboto Mono', monospace;
 
 }
