--- a/styles/becoders.css
+++ b/styles/becoders.css
@@ -1,4 +1,5 @@
 
+
 .container5{
     background-color:var(--ZesColor);
     width: 80%;
@@ -45,7 +46,9 @@ span{
 .info-container{
     column-gap: 1rem;
     display:flex;
+    padding: 20px 0 20px 0;
 }
+
 .info-left{
     border-radius: 20px;
     border: 1px solid rgb(75, 103, 139);   
